Accumulate errors for Seq and Vector parsers

--- a/aeson.cabal
+++ b/aeson.cabal
@@ -196,6 +196,7 @@ test-suite tests
     SerializationFormatSpec
     Types
     UnitTests
+    UnitTests.AccErrors
     UnitTests.NullaryConstructors
 
   build-depends:
